# week5_exercises

./: .gitignore  README.md
DependencyInjection/: CMakeLists.txt
DependencyInjection/include/: DiscreteFunction.h
DependencyInjection/source/: CMakeLists.txt  DependencyInjection.cpp  DiscreteFunction.cpp
Factory/: CMakeLists.txt
Factory/include/: UniversityMembers.h
Factory/source/: CMakeLists.txt  Factory.cpp
RAII/: CMakeLists.txt  testFile.txt
RAII/source/: CMakeLists.txt  RAII.cpp
